<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutSettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/radioGroupLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="200dp"
            android:checkedButton="@+id/radioBtnEng"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/radioBtnEng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioBtnEng" />

            <RadioButton
                android:id="@+id/radioBtnNL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioBtnNl" />
        </RadioGroup>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="radioGroupLanguage,txtLanguagePicker"
            tools:layout_editor_absoluteY="731dp" />

        <TextView
            android:id="@+id/txtLanguagePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:layout_marginEnd="176dp"
            android:layout_marginBottom="20dp"
            android:text="@string/textViewLanguageDesc"
            app:layout_constraintBottom_toTopOf="@+id/radioGroupLanguage"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroupColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="80dp"
            android:checkedButton="@+id/radioBtnWhite"
            app:layout_constraintBottom_toTopOf="@+id/txtLanguagePicker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/radioBtnWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioBtnWhite" />

            <RadioButton
                android:id="@+id/radioBtnDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioBtnDark" />
        </RadioGroup>

        <TextView
            android:id="@+id/txtColorPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:layout_marginEnd="176dp"
            android:padding="20dp"
            android:text="@string/textViewColorDesc"
            app:layout_constraintBottom_toTopOf="@+id/radioGroupColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="radioGroupColor,txtColorPicker"
            tools:layout_editor_absoluteY="731dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
